# RationaleVault

./: .env.example  .gitattributes  .gitignore  API_REPORT.md  ARCHITECTURAL_AUDIT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEEP_RESEARCH_REVIEW.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.cursor/rules/: relay.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmarks.yml  publish.yml  verify.yml
.opencode/plans/: 2026-07-04-code-quality-fixes.md
.rationalevault/: knowledge.md  memory.md
.rationalevault/reports/: release_manifest.json  report.md
.relay/: RELAY_SKILL.md  handoff_checklist.md  project.yaml  relay_protocol.yaml
.relay/adapters/: CLAUDE.md  copilot-instructions.md  cursor_rules.md  opencode_instructions.md
.superpowers/sdd/: final-diff.txt  progress.md  task-1-brief.md  task-1-diff-v2.txt  task-1-diff.txt  task-1-fix-report.md  task-1-report.md  task-2-brief.md  task-2-diff.txt  task-2-report.md  task-3-report.md  task-4-brief.md  task-4-diff.txt  task-4-fix-report.md  task-4-report.md  task-5-report.md
benchmarks/: embedding_benchmark.py  governance_benchmark.py  recommendation_benchmark.py  snapshot_benchmark.py  timeline_benchmark.py
benchmarks/history/: 2026-07-08.json  2026-07-09.json  2026-07-10.json  2026-07-11.json  2026-07-12.json  2026-07-13.json  2026-07-14.json  2026-07-15.json  2026-07-16.json  2026-07-17.json  2026-07-18.json  2026-07-19.json  2026-07-20.json  2026-07-21.json  2026-07-22.json  2026-07-23.json  2026-07-24.json
docker/postgres/: docker-compose.yml
docs/: AGENT_COMPILERS.md  ARCHITECTURE.md  COGNITIVE_HEAD.md  CONTEXT_PLANNER.md  EVENT_LEDGER.md  KNOWLEDGE_COMPILER.md  RationaleVault_v1.2.0_Architectural_Review.md  RationaleVault_v1.2.1_Architectural_Review.md  RationaleVault_v1.2.1_Update_Patch.md  SNAPSHOT_BENCHMARKS.md  SNAPSHOT_IMPLEMENTATION_PLAN.md  agent_compilers.md  architecture.md  cognitive_head.md  compilers.md  concepts.md  context.md  context_planner.md  developer_guide.md  evaluation-gates.md  evaluation.md  event-ledger.md  first_experiment.md  graph.md  knowledge.md  knowledge_compiler.md  memory.md  philosophy.md  plugin_sdk.md  quickstart.md  release-checklist.md  release_checklist.md  roadmap.md  v1.1.0_snapshot.md  v1.4.0_plugin_sdk_freeze.md  v1.5.0_execution_intelligence_freeze.md  v1.6.0_reflection_freeze.md  v1.7.0_reflection_engine_freeze.md  v1.x_architecture_baseline.md  v2.1_workspace_freeze.md  (+9 more)
docs/adr/: ADR-000-template.md  ADR-003-cognitive-pipeline-architecture.md  (+22 more)
examples/: first_experiment.md
examples/bad_extension/: projection.py  pyproject.toml
examples/projection_example/: ARCHITECTURE.md  README.md  __init__.py  events.py  projection.py  pyproject.toml  runtime.py  state.py
examples/projection_example/benchmarks/: benchmark.py
examples/projection_example/tests/: test_conformance.py  test_projection.py
examples/timeline_extension/: ARCHITECTURE.md  README.md  __init__.py  events.py  projection.py  pyproject.toml  state.py
examples/timeline_extension/benchmarks/: benchmark.py
examples/timeline_extension/tests/: test_conformance.py  test_projection.py
migrations/: 0001_initial.sql  0002_indexes.sql  0003_snapshots.sql
rationalevault/: __init__.py  exceptions.py  logging.py
relay/: __init__.py
scripts/: benchmark_replay.py  check_dependencies.py  ci_benchmark.py  compile_validation.py  extract_events.py  generate_adapters.py  handoff_metrics.py  init_db.py  measure_jaccard_cache.py  profile_cross_project.py  profile_cross_project_results.json  record_opencode_work.py  seed_demo.py  seed_validation.py
tests/: conftest.py  test_cli.py  test_projection_infra.py  test_projection_rebuild.py
(+1060 files in other folders)
