[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rationalevault"
version = "1.0.1"
description = "RationaleVault — Event-sourced cognitive continuity and memory layer for multi-agent AI workflows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.1",
    "python-dotenv>=1.0",
]

[project.scripts]
rationalevault = "rationalevault.cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "db: marks tests that require a live PostgreSQL database",
]

[tool.hatch.build.targets.wheel]
packages = ["rationalevault"]
