[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bad_extension"
version = "0.1.0"
description = "A bad extension for testing the certification engine."
dependencies = [
    "rationalevault>=999.0.0", # Intentional incompatibility
]

[project.entry-points."rationalevault.plugins"]
bad = "bad_extension.projection:BadProjection"
